--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiktak",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Quick and Simple Git Cli Tool",
   "main": "./bin/index.js",
   "preferGlobal": true,
@@ -31,6 +31,9 @@
   "license": "MIT",
   "dependencies": {
     "await-spawn": "^4.0.2",
+    "chalk": "^5.0.1",
+    "date-fns": "^2.29.1",
+    "fuse.js": "^6.6.2",
     "is-git-repository": "^2.0.0",
     "prompts": "^2.4.2",
     "url": "^0.11.0"
