--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fuse.js": "^6.6.2",
     "is-git-repository": "^2.0.0",
     "prompts": "^2.4.2",
+    "update-notifier": "^6.0.2",
     "url": "^0.11.0"
   }
 }
